# esp32_interfaces

esp32_ble/: Cargo.toml  main.rs
esp32_ble/go-script/: go.mod  go.sum  main.go  write_linux.go  write_other.go
esp32_ble/src/: ble.rs  config.json  lib.rs  pin.rs
esp32_wifi/: Cargo.toml
esp32_wifi/src/: config.json  lib.rs  pin.rs  web.rs  wifi.rs
